# manga-scraper

./: .gitignore  Docs.txt  README.md  TODO  mangascraper-install.sh  monitor.py  nh.txt  nhentai-api.py  nhentai-scraper-installer.sh  nhentai-scraper.code-workspace  nhentai-scraper.py  nhentai-scraper.py.bak  nhentai_scraper.py  nhentai_scraper_core.py  nhscraper-install.sh  pyproject.toml  scraper_core.py  scraper_monitor.py
BACKUPS/: nhscraper-install-old.sh  nhscraper-install.sh-original.bak
BACKUPS/nhscraper-old/: cli.py  fetchers.py  nhscraper_api.py
BACKUPS/nhscraper-original/: cli.py  config.py  graphql_api.py  nhscraper_api.py
OLD/: nhscraper-install.sh-new.bak
backup/: nhscraper-install.sh
backup/nhscraper/: cli.py
backup/nhscraper/extensions/: local_manifest.json
backups/: README.md.bak
backups/core/: downloader.py
backups/extensions/: __init__.py
backups/extensions/skeleton/: skeleton__nhsext.py
backups/nhscraper/: __init__.py
backups/nhscraper/extensions/: extension_manager.py
docs/: TODO.txt  async_runner.md  executor.md
mangascraper/: cli.py
mangascraper/core/: api.py  cleaning_helper.py  database.py  downloader.py  downloader.py.bak  orchestrator.py
mangascraper/dashboard/: control_panel.py
mangascraper/dashboard/routes/: database_routes.py  gallery_routes.py  scraper_routes.py
mangascraper/dashboard/templates/: database.html  gallery.html
mangascraper/extensions/: extension_manager.py  local_manifest.json
nhentai-scraper/: cli.py  nhentai-api.py
nhscraper/: api.py  cli.py  config.py  db.py  downloader.py  graphql_api.py  logger.py  nhscraper-api.py
nhscraper/core/: api copy.py  api.py  api.py.bak  cleaning_helper.py  config.py  config.py.bak  configurator.py  database.py  db.py  downloader.py  downloader.py.bak  dynamic_sleep_tester.py  fetchers.py  fetchers.py.bak  helper.py  logger.py  logger.py.bak  nhscraper_test.db  orchestrator.py  scheduler.py
nhscraper/dashboard/: __init__.py  control_panel.py
nhscraper/dashboard/routes/: database_routes.py  gallery_routes.py  scraper_routes.py
nhscraper/extensions/: __init__.py  extension_loader.py  extension_manager.py  local_manifest.json  manifest.json
nhscraper/scrapers/: __init__.py
systemd/: nhentai-scraper.service  nhentai-scraper.timer
(+25 files in other folders)
