[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nhentai-scraper"
version = "1.4.2-beta"
description = "NHentai scraper with extensions for the integration into other services."
readme = "README.md"
authors = [{ name = "C7YPT0N1C" }]
dependencies = [
    "cloudscraper",
    "requests[socks]>=2.31.0",
    "flask>=2.3.3",
    "beautifulsoup4>=4.12.2",
    "tqdm>=4.66.1",
    "aiohttp>=3.9.2",
    "gql[all]>=3.5.0",
    "python-dotenv>=1.0"
]
requires-python = ">=3.9"

[project.scripts]
nhentai-scraper = "nhscraper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nhscraper*", "nhscraper.core*", "nhscraper.extensions*"]