[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-scraper"
version = "1.19.0-beta"
description = "Manga scraper with extensions for the integration into other services."
readme = "README.md"
authors = [{ name = "C7YPT0N1C" }]
dependencies = [
    "cloudscraper",
    "requests[socks]>=2.31.0",
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "beautifulsoup4>=4.12.2",
    "tqdm>=4.66.1",
    "gql[all]>=3.5.0",
    "python-dotenv>=1.0"
]
requires-python = ">=3.9"

[project.scripts]
manga-scraper = "mangascraper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mangascraper*", "mangascraper.core*", "mangascraper.extensions*"]